--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "dependencies": {
     "@nuxt/content": "^1.14.0",
+    "@nuxtjs/apollo": "^4.0.1-rc.5",
     "@nuxtjs/axios": "^5.13.1",
     "core-js": "^3.9.1",
+    "graphql-tag": "^2.12.4",
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
