--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-	"lint": "next lint"
+    "lint": "next lint"
   },
   "dependencies": {
     "-": "^0.0.1",
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
+    "@graphql-codegen/cli": "^1.21.5",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
