--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "start": "next start",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen:run": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
-    "-": "^0.0.1",
     "@apollo/client": "^3.3.20",
     "@chakra-ui/icons": "^1.0.13",
     "@chakra-ui/react": "^1.6.3",
@@ -25,7 +25,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
-    "@graphql-codegen/cli": "^1.21.5",
+    "@graphql-codegen/fragment-matcher": "2.0.1",
+    "@graphql-codegen/introspection": "1.18.2",
+    "@graphql-codegen/typescript": "1.22.3",
+    "@graphql-codegen/typescript-graphql-files-modules": "1.18.1",
+    "@graphql-codegen/typescript-operations": "1.18.2",
+    "@graphql-codegen/typescript-react-apollo": "2.2.7",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
