--- a/graphql-codegen.yml
+++ b/graphql-codegen.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: "http://api:3000"
+schema: "http://localhost:3001/graphql"
 documents: "src/graphql/**/*.{gql,graphql}"
 generates:
   src/graphql/client/index.tsx:
