--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "lint": "next lint",
-    "codegen:run": "graphql-codegen --config codegen.yml"
+    "codegen:run": "graphql-codegen --config graphql-codegen.yml",
+    "codegen": "graphql-codegen --config graphql-codegen.yml",
+    "schemagen": "graphql-codegen --config graphql-schemagen.yml"
   },
   "dependencies": {
     "@apollo/client": "^3.3.20",
@@ -25,8 +27,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
+    "@graphql-codegen/cli": "^1.21.6",
     "@graphql-codegen/fragment-matcher": "2.0.1",
     "@graphql-codegen/introspection": "1.18.2",
+    "@graphql-codegen/schema-ast": "^1.18.3",
     "@graphql-codegen/typescript": "1.22.3",
     "@graphql-codegen/typescript-graphql-files-modules": "1.18.1",
     "@graphql-codegen/typescript-operations": "1.18.2",
@@ -38,6 +42,7 @@
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
     "babel-loader": "^8.2.2",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.29.0",
     "eslint-config-next": "^11.0.0",
     "typescript": "^4.3.2"
