--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "graphql": "^15.5.0",
     "next": "10.2.3",
     "react": "^17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icon": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
@@ -41,6 +42,7 @@
     "@storybook/react": "^6.2.9",
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
+    "@types/react-icons": "^3.0.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.29.0",
