デザインの仕様を大幅に整理、および認証機能を追加

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
 	  "next-env.d.ts",
 	  "**/*.ts",
 	  "**/*.tsx"
-	],
+, "src/pages/api/auth/[...auth0].ts"	],
 	"exclude": [
 	  "node_modules",
 	  ".storybook"
