--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.20",
+    "@auth0/nextjs-auth0": "^1.5.0",
     "@chakra-ui/icons": "^1.0.13",
     "@chakra-ui/react": "^1.6.3",
     "@emotion/react": "^11.4.0",
@@ -24,7 +25,9 @@
     "next": "10.2.3",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
-    "react-icon": "^1.0.0"
+    "react-icon": "^1.0.0",
+    "react-slick": "^0.28.1",
+    "recharts": "^2.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
@@ -36,10 +39,10 @@
     "@graphql-codegen/typescript-graphql-files-modules": "1.18.1",
     "@graphql-codegen/typescript-operations": "1.18.2",
     "@graphql-codegen/typescript-react-apollo": "2.2.7",
-    "@storybook/addon-actions": "^6.2.9",
-    "@storybook/addon-essentials": "^6.2.9",
-    "@storybook/addon-links": "^6.2.9",
-    "@storybook/react": "^6.2.9",
+    "@storybook/addon-actions": "^6.3.4",
+    "@storybook/addon-essentials": "^6.3.4",
+    "@storybook/addon-links": "^6.3.4",
+    "@storybook/react": "^6.3.4",
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
     "@types/react-icons": "^3.0.0",
