--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "lint": "next lint",
+    "husky:prepare":"husky install",
     "codegen:run": "graphql-codegen --config graphql-codegen.yml",
     "codegen": "graphql-codegen --config graphql-codegen.yml",
     "schemagen": "graphql-codegen --config graphql-schemagen.yml"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "@apollo/client": "^3.3.20",
@@ -46,10 +53,22 @@
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
     "@types/react-icons": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^7.29.0",
+    "eslint": "^7.32.0",
     "eslint-config-next": "^11.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^7.0.1",
+    "lint-staged": "^11.1.1",
+    "prettier": "^2.2.1",
     "typescript": "^4.3.2"
   }
 }
