--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "lint": "next lint",
-    "husky:prepare":"husky install",
+    "husky:prepare": "husky install",
     "codegen:run": "graphql-codegen --config graphql-codegen.yml",
     "codegen": "graphql-codegen --config graphql-codegen.yml",
     "schemagen": "graphql-codegen --config graphql-schemagen.yml"
@@ -29,7 +29,7 @@
     "@emotion/styled": "^11.3.0",
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.0",
-    "next": "10.2.3",
+    "next": "^11.1.0",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-icon": "^1.0.0",
