--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-icon": "^1.0.0",
+    "react-markdown": "^7.0.1",
     "react-slick": "^0.28.1",
-    "recharts": "^2.0.10"
+    "recharts": "^2.0.10",
+    "remark-gfm": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
@@ -46,10 +48,10 @@
     "@graphql-codegen/typescript-graphql-files-modules": "1.18.1",
     "@graphql-codegen/typescript-operations": "1.18.2",
     "@graphql-codegen/typescript-react-apollo": "2.2.7",
-    "@storybook/addon-actions": "^6.3.4",
-    "@storybook/addon-essentials": "^6.3.4",
-    "@storybook/addon-links": "^6.3.4",
-    "@storybook/react": "^6.3.4",
+    "@storybook/addon-actions": "^6.3.8",
+    "@storybook/addon-essentials": "^6.3.8",
+    "@storybook/addon-links": "^6.3.8",
+    "@storybook/react": "^6.3.8",
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
     "@types/react-icons": "^3.0.0",
@@ -69,6 +71,7 @@
     "husky": "^7.0.1",
     "lint-staged": "^11.1.1",
     "prettier": "^2.2.1",
+    "sass": "^1.39.0",
     "typescript": "^4.3.2"
   }
 }
